--- a/css/style.css
+++ b/css/style.css
@@ -5784,7 +5784,7 @@ ol.comment-list li.comment .comment-respond .comment-form p {
 .blog-style-3 .wt-post-meta ul li.post-category:after{display:none;}
 
 
-.blog-style-3:hover{background-color:#d72323}
+.blog-style-3:hover{background-color:#d72323;transition: all 0.5s ease;}
 
 .blog-style-3:hover .post-title{color:#fff;}
 .blog-style-3:hover .wt-post-text p{color:#fff;}
