--- a/css/style.css
+++ b/css/style.css
@@ -5989,10 +5989,10 @@ ol.comment-list li.comment .comment-respond .comment-form p {
 .logo-header {
 	display: table;
 	float: left;
-	width: 130px;
-	height: 70px;
+	width: 180px;
+	height: 100px;
 	vertical-align: middle;
-	padding: 0;
+	padding: 0 0 25px 15px;
 	font-size: 36px;
 	color: #1bbce8;
 	margin-top: 0;
@@ -11864,3 +11864,4 @@ transition: all 0.5s ease-in-out;
 	transform: scaleX(1);
 	transform-origin: center;
   }
+
